src/ventas/ventas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ventas-ef
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ventas
  template:
    metadata:
      labels:
        app: ventas
    spec:
      containers:
        - name: ventas
          image: us-central1-docker.pkg.dev/grounded-pivot-459800-v1/microservicios/ventas-ef:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ventas
spec:
  selector:
    app: ventas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
