src/ventas/ventas-ef-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ventas-ef
spec:
  selector:
    app: ventas-ef
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
