src/ventas/ventas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ventas
spec:
  selector:
    app: ventas
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
