src/ventas/ventas-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ventas-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ventas
                port:
                  number: 80
          - path: /ventas
            pathType: Prefix
            backend:
              service:
                name: ventas
                port:
                  number: 80
